# CandleLight

./: .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: codeql-analysis.yml
src/: clParser.cpp  clParser.h  clURI.cpp  clURI.h  main.cpp
